--- a/pkg/subgraph/package.json
+++ b/pkg/subgraph/package.json
@@ -11,6 +11,7 @@
     "manifest:arbitrum": "node ./src/scripts/mustache arbitrum",
     "manifest:optimism": "node ./src/scripts/mustache optimism",
     "manifest:matic": "node ./src/scripts/mustache matic",
+    "manifest:gnosis": "node ./src/scripts/mustache gnosis",
     "build:arbsep": "pnpm manifest:arbsep && graph codegen && graph build",
     "build:ethsep": "pnpm manifest:ethsep && graph codegen && graph build",
     "create-local": "graph create --node http://localhost:8020/ kamikazebr/gv2",
@@ -21,6 +22,8 @@
     "deploy:arbitrum": "pnpm manifest:arbitrum && graph deploy --studio gv2-arbitrum",
     "deploy:optimism": "pnpm manifest:optimism && graph deploy --studio gv2-optimism",
     "deploy:matic": "pnpm manifest:matic && graph deploy --studio gv2-matic",
+    "deploy:gnosis": "pnpm manifest:gnosis && graph deploy --studio gv2-gnosis",
+    "deploy:prod": "export SUB_PROD_VERSION=0.0.4 && pnpm deploy:arbitrum -l $SUB_PROD_VERSION && pnpm deploy:optimism -l $SUB_PROD_VERSION && pnpm deploy:matic -l $SUB_PROD_VERSION && pnpm deploy:gnosis -l $SUB_PROD_VERSION",
     "build-deploy:arbsep": "pnpm build:arbsep && pnpm deploy:arbsep:last",
     "build-deploy:ethsep": "pnpm build:ethsep && pnpm deploy:ethsep:last",
     "local": "pnpm create-local && pnpm build && pnpm deploy:local",
