--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -6,15 +6,15 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: RegistryFactoryV0_0
-    network: optimism
+    network: matic
     context:
       chainId: 
         type: Int
-        data: 10
+        data: 137
     source:
-      address: "0x1fac47cf25f1ca9f20ba366099d26b28401f5715"
+      address: "0x57a9835b204dbcc101dbf981625a3625e8043b9c"
       abi: RegistryFactoryV0_0
-      startBlock: 125112016
+      startBlock: 61584765
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -40,15 +40,15 @@ dataSources:
 
   - kind: ethereum/contract
     name: PassportScorer
-    network: optimism
+    network: matic
     context:
       chainId: 
         type: Int
-        data: 10
+        data: 137
     source:
-      address: "0xc93830dd463516ed5f28f6cd4f837173b87ff389"
+      address: "0x1fac47cf25f1ca9f20ba366099d26b28401f5715"
       abi: PassportScorer
-      startBlock: 125112016
+      startBlock: 61584765
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -72,7 +72,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: RegistryCommunityV0_0
-    network: optimism
+    network: matic
     source:
       abi: RegistryCommunityV0_0
     mapping:
@@ -134,7 +134,7 @@ templates:
 
   - kind: ethereum/contract
     name: CVStrategyV0_0
-    network: optimism
+    network: matic
     source:
       abi: CVStrategyV0_0
     mapping:
