--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -1,10 +1,5 @@
 name: "Code Review by Gemini AI"
-on:
-  pull_request:
-    paths:
-      - "**/*.ts"
-      - "**/*.tsx"
-      - "**/*.sol"
+on: pull_request
 jobs:
   review:
     runs-on: ubuntu-latest
