--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -9,24 +9,42 @@ jobs:
       pull-requests: write
     steps:
       - uses: actions/checkout@v3
+
+      - name: "Check if relevant files are modified"
+        id: check_changes
+        shell: bash
+        run: |
+          # Check for modified .ts, .tsx, or .sol files
+          git fetch origin "${{ github.event.pull_request.head.ref }}" # fetch the branch with changes
+          git fetch origin "${{ github.event.pull_request.base.ref }}" # fetch the target branch
+          git diff --name-only "origin/${{ github.event.pull_request.base.ref }}" "origin/${{ github.event.pull_request.head.ref }}" > modified_files.txt
+
+          # Check if there are any .ts, .tsx, or .sol files modified
+          if grep -E '\.ts$|\.tsx$|\.sol$' modified_files.txt; then
+            echo "files_changed=true" >> $GITHUB_ENV
+          else
+            echo "files_changed=false" >> $GITHUB_ENV
+          fi
+
       - name: "Get diff of the pull request"
+        if: env.files_changed == 'true'
         id: get_diff
         shell: bash
         env:
           PULL_REQUEST_HEAD_REF: "${{ github.event.pull_request.head.ref }}"
           PULL_REQUEST_BASE_REF: "${{ github.event.pull_request.base.ref }}"
         run: |-
-          git fetch origin "${{ env.PULL_REQUEST_HEAD_REF }}" # fetch the branch with changes
-          git fetch origin "${{ env.PULL_REQUEST_BASE_REF }}" # fetch the target branch
-          git checkout "${{ env.PULL_REQUEST_HEAD_REF }}" # switch to the branch with changes
-          git diff "origin/${{ env.PULL_REQUEST_BASE_REF }}" > "diff.txt" # generate a diff
+          # Only include changes to .ts, .tsx, and .sol files in the diff
+          git diff "origin/${{ env.PULL_REQUEST_BASE_REF }}" -- '*.ts' '*.tsx' '*.sol' > "diff.txt"
           {
             echo "pull_request_diff<<EOF"; 
             cat "diff.txt";
             echo 'EOF';
-          } >> $GITHUB_OUTPUT # save the diff to an output variable
+          } >> $GITHUB_OUTPUT # save the filtered diff to an output variable
+
       - uses: rubensflinco/gemini-code-review-action@1.0.5
         name: "Code Review by Gemini AI"
+        if: env.files_changed == 'true'
         continue-on-error: true
         id: review
         with:
@@ -38,7 +56,7 @@ jobs:
           model: "gemini-1.5-pro-latest"
           pull_request_diff: |-
             ${{ steps.get_diff.outputs.pull_request_diff }}
-          pull_request_chunk_size: "3500" # chunk size is important to avoid exceeding the API limits
+          pull_request_chunk_size: "3500"
           extra_prompt: |-
             Only review files with extensions: .ts, .tsx, .sol
             Focus your review on code logic, security vulnerabilities, and potential improvements in these files.
