--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,6 @@
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#default-profile
 [profile.default]
-solc-version = "0.8.19"
+# solc-version = "0.8.19"
 src = 'pkg/contracts/src'
 script = 'pkg/contracts/script'
 test = 'pkg/contracts/test'
