Deploy with setPoolParams with threshold
# Conflicts:
#	pkg/contracts/out/Allo.sol/Allo.json
#	pkg/contracts/out/CVStrategyHelpers.sol/CVStrategyHelpers.json
#	pkg/contracts/out/CVStrategyV0_0.sol/CVStrategyV0_0.json
#	pkg/contracts/out/CVStrategyV0_0.sol/IPointStrategy.json
#	pkg/contracts/out/CVStrategyV0_1.sol/CVStrategyV0_1.json
#	pkg/contracts/out/ERC20.sol/ERC20.json
#	pkg/contracts/out/ERC20/IERC20.sol/IERC20.json
#	pkg/contracts/out/FAllo.sol/FAllo.json
#	pkg/contracts/out/GV2ERC20.sol/GV2ERC20.json
#	pkg/contracts/out/IAllo.sol/IAllo.json
#	pkg/contracts/out/IArbitrator.sol/IArbitrator.json
#	pkg/contracts/out/IERC20.sol/IERC20.json
#	pkg/contracts/out/IERC20Metadata.sol/IERC20Metadata.json
#	pkg/contracts/out/IERC20Permit.sol/IERC20Permit.json
#	pkg/contracts/out/IERC20Upgradeable.sol/IERC20Upgradeable.json
#	pkg/contracts/out/IRegistry.sol/IRegistry.json
#	pkg/contracts/out/IRegistryFactory.sol/IRegistryFactory.json
#	pkg/contracts/out/ISafe.sol/Enum.json
#	pkg/contracts/out/ISafe.sol/ISafe.json
#	pkg/contracts/out/ISafe.sol/SafeProxyFactory.json
#	pkg/contracts/out/MockERC20.sol/MockERC20.json
#	pkg/contracts/out/PassportScorer.sol/PassportScorer.json
#	pkg/contracts/out/PassportScorerTest.t.sol/PassportScorerTest.json
#	pkg/contracts/out/Registry.sol/Registry.json
#	pkg/contracts/out/RegistryCommunityV0_0.sol/RegistryCommunityV0_0.json
#	pkg/contracts/out/RegistryCommunityV0_1.sol/RegistryCommunityV0_1.json
#	pkg/contracts/out/RegistryFactoryDiamond.sol/RegistryFactoryDiamond.json
#	pkg/contracts/out/RegistryFactoryFacet.sol/RegistryFactoryFacet.json
#	pkg/contracts/out/RegistryFactoryV0_0.sol/RegistryFactoryV0_0.json
#	pkg/contracts/out/RegistryFactoryV0_1.sol/RegistryFactoryV0_1.json
#	pkg/contracts/out/RegistrySetup.sol/RegistrySetup.json
#	pkg/contracts/out/RegistrySetup.sol/RegistrySetupFull.json
#	pkg/contracts/out/SafeArbitrator.sol/SafeArbitrator.json
#	pkg/contracts/out/SafeArbitratorTest.t.sol/SafeArbitratorTest.json
#	pkg/contracts/out/SafeER

--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -134,6 +134,7 @@ upgrade-testnet-multi-arb:
 	--legacy \
 	--via-ir \
 	--verify \
+	--with-gas-price 500000000 \
 	-vvv
 
 verify-testnet-multi-arb: 
