Revert unwanted upgrade

--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -125,10 +125,11 @@ upgrade-testnet-multi-arb:
 	--rpc-url $(RPC_URL_ARB_TESTNET) \
 	--sig "run(string)" 'arbsepolia' \
 	--account pkGarden \
-	--etherscan-api-key $(ARBISCAN_API_KEY) \
+	--verifier blockscout \
+	--verifier-url https://arb-sepolia.blockscout.com/api/ \
 	--ffi \
-	--chain-id 421614 \
 	--broadcast \
+	--chain-id 421614 \
 	--legacy \
 	--via-ir \
 	--verify \
