--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -1,6 +1,7 @@
 name: "Code Review by Gemini AI"
 on:
-  pull_request:
+  workflow_dispatch:
+
 jobs:
   review:
     runs-on: ubuntu-latest
@@ -9,33 +10,6 @@ jobs:
       pull-requests: write
     steps:
       - uses: actions/checkout@v3
-
-      - name: "Check for !ai keyword in commit message"
-        id: check_commit_message
-        run: |
-          COMMIT_MESSAGE=$(git log -1 --pretty=%B)
-          echo "Commit message: $COMMIT_MESSAGE"
-          if [[ "$COMMIT_MESSAGE" == *"!ai"* ]]; then
-            echo "run_ai=true" >> $GITHUB_ENV
-          else
-            echo "run_ai=false" >> $GITHUB_ENV
-          fi
-
-      - name: "Check if relevant files are modified"
-        id: check_changes
-        shell: bash
-        run: |
-          # Check for modified .ts, .tsx, or .sol files
-          git fetch origin "${{ github.event.pull_request.head.ref }}" # fetch the branch with changes
-          git fetch origin "${{ github.event.pull_request.base.ref }}" # fetch the target branch
-          git diff --name-only "origin/${{ github.event.pull_request.base.ref }}" "origin/${{ github.event.pull_request.head.ref }}" > modified_files.txt
-
-          # Check if there are any .ts, .tsx, or .sol files modified
-          if grep -E '\.ts$|\.tsx$|\.sol$' modified_files.txt; then
-            echo "files_changed=true" >> $GITHUB_ENV
-          else
-            echo "files_changed=false" >> $GITHUB_ENV
-          fi
 
       - name: "Get diff of the pull request"
         if: env.files_changed == 'true' && env.run_ai == 'true'
