--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -1,9 +1,6 @@
 name: "Code Review by Gemini AI"
 on:
-  issue_comment:
-    types:
-      - created
-      - updated
+  psuh:
 
 jobs:
   review:
@@ -24,35 +21,21 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_ID: ${{ github.event.comment.node_id }}
 
-      - name: Fetch PR details using GitHub API
-        id: pr-details
+      - name: Fetch PR diff using GitHub API
+        id: pr-diff
         uses: actions/github-script@v6
         with:
           script: |
             const pr_number = context.payload.issue.number;
-            const pr = await github.rest.pulls.get({
+            const { data: diff } = await github.request('GET /repos/{owner}/{repo}/pulls/{pull_number}', {
+              headers: {
+                accept: 'application/vnd.github.v3.diff'
+              },
               owner: context.repo.owner,
               repo: context.repo.repo,
               pull_number: pr_number
             });
-            return pr.data;
-
-      - name: "Get diff of the pull request"
-        id: get_diff
-        shell: bash
-        env:
-          PULL_REQUEST_HEAD_REF: "${{ steps.pr-details.outputs.head.ref }}"
-          PULL_REQUEST_BASE_REF: "${{ steps.pr-details.outputs.base.ref }}"
-        run: |-
-          echo "PULL_REQUEST_HEAD_REF: $PULL_REQUEST_HEAD_REF"
-          echo "PULL_REQUEST_BASE_REF: $PULL_REQUEST_BASE_REF"
-          # Only include changes to .ts, .tsx, and .sol files in the diff
-          git diff "origin/${{ env.PULL_REQUEST_BASE_REF }}" -- '*.ts' '*.tsx' '*.sol' > "diff.txt"
-          {
-            echo "pull_request_diff<<EOF"; 
-            cat "diff.txt";
-            echo 'EOF';
-          } >> $GITHUB_OUTPUT # save the filtered diff to an output variable
+            return { diff };
 
       - uses: rubensflinco/gemini-code-review-action@1.0.5
         name: "Code Review by Gemini AI"
@@ -66,7 +49,7 @@ jobs:
           git_commit_hash: ${{ steps.pr-details.outputs.head.sha }}
           model: "gemini-1.5-pro-latest"
           pull_request_diff: |-
-            ${{ steps.get_diff.outputs.pull_request_diff }}
+            ${{ steps.pr-diff.outputs.diff }}
           pull_request_chunk_size: "3500"
           extra_prompt: |-
             Only review files with extensions: .ts, .tsx, .sol
