--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -25,7 +25,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_ID: ${{ github.event.comment.node_id }}
 
-      - name: Fetch PR diff using GitHub API
+      - name: Fetch PR diff and head SHA using GitHub API
         id: pr-diff
         uses: actions/github-script@v6
         with:
@@ -44,17 +44,17 @@ jobs:
               repo: context.repo.repo,
               pull_number: pr_number
             });
-            return { diff, headSha: pr.data.head.sha };
+            const headSha = pr.data.head.sha;
+
+            // Set outputs for the diff and head SHA
+            core.setOutput("diff", diff);
+            core.setOutput("headSha", headSha);
 
       - name: Log diff
-        env:
-          DIFF: ${{ steps.pr-diff.outputs.diff }}
-        run: echo "$DIFF"
+        run: echo "PR Diff: ${{ steps.pr-diff.outputs.diff }}"
 
-      - name: Log head sha
-        env:
-          HEAD_SHA: ${{ steps.pr-diff.outputs.headSha }}
-        run: echo "$HEAD_SHA"
+      - name: Log head SHA
+        run: echo "Head Commit SHA: ${{ steps.pr-diff.outputs.headSha }}"
 
       - uses: rubensflinco/gemini-code-review-action@1.0.5
         name: "Code Review by Gemini AI"
