--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -50,11 +50,10 @@ jobs:
             core.setOutput("diff", diff);
             core.setOutput("headSha", headSha);
 
-      - name: Log diff
-        run: echo "PR Diff: ${{ steps.pr-diff.outputs.diff }}"
-
-      - name: Log head SHA
-        run: echo "Head Commit SHA: ${{ steps.pr-diff.outputs.headSha }}"
+      - name: Log diff to file
+        run: |
+          echo "${{ steps.pr-diff.outputs.diff }}" > pr_diff.txt
+          echo "PR Diff saved to pr_diff.txt"
 
       - uses: rubensflinco/gemini-code-review-action@1.0.5
         name: "Code Review by Gemini AI"
