--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -51,6 +51,7 @@ jobs:
             core.setOutput("headSha", headSha);
 
       - name: Log diff to file
+        continue-on-error: true
         run: |
           echo "${{ steps.pr-diff.outputs.diff }}"
 
