--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -25,7 +25,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_ID: ${{ github.event.comment.node_id }}
 
-      - name: Fetch PR diff and head SHA using GitHub API
+      - name: Fetch filtered PR diff (only .ts, .tsx, .sol files)
         id: pr-diff
         uses: actions/github-script@v6
         with:
@@ -44,16 +44,29 @@ jobs:
               repo: context.repo.repo,
               pull_number: pr_number
             });
+
+            // Filter the diff for only .ts, .tsx, and .sol files
+            const filteredDiff = diff.split('\n').filter(line => {
+              // Keep the line if it specifies a change in .ts, .tsx, or .sol files
+              return line.startsWith('diff --git') && (
+                line.endsWith('.ts') || line.endsWith('.tsx') || line.endsWith('.sol')
+              );
+            }).join('\n');
+
+            // Get the head commit SHA
             const headSha = pr.data.head.sha;
 
-            // Set outputs for the diff and head SHA
-            core.setOutput("diff", diff);
+            // Set outputs for the filtered diff and head SHA
+            core.setOutput("diff", filteredDiff);
             core.setOutput("headSha", headSha);
 
-      - name: Log diff to file
-        continue-on-error: true
+      - name: Log filtered diff to file
         run: |
-          echo "${{ steps.pr-diff.outputs.diff }}"
+          echo "${{ steps.pr-diff.outputs.diff }}" > filtered_pr_diff.txt
+          echo "Filtered PR Diff saved to filtered_pr_diff.txt"
+
+      - name: Log head SHA
+        run: echo "Head Commit SHA: ${{ steps.pr-diff.outputs.headSha }}"
 
       - uses: rubensflinco/gemini-code-review-action@1.0.5
         name: "Code Review by Gemini AI"
