--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -89,11 +89,12 @@ jobs:
           pull_request_chunk_size: "3500"
           extra_prompt: |-
             Focus your review on code logic, security vulnerabilities, and potential improvements in these files.
+            Never ask to provide more core and only review the code you received.
           log_level: "DEBUG"
 
       - name: Add thumbs down reaction if something went wrong
         if: failure() # This step runs if any previous step failed
-        run: gh api graphql --silent --raw-field query="mutation AddReaction {addReaction(input:{subjectId:\"$NODE_ID\",content:-1}){reaction{content}subject{id}}}"
+        run: gh api graphql --silent --raw-field query="mutation AddReaction {addReaction(input:{subjectId:\"$NODE_ID\",content:THUMBS_DOWN}){reaction{content}subject{id}}}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_ID: ${{ github.event.comment.node_id }}
