chore: update GraphQL config and .gitignore entries.
- Added a new entry to the .gitignore file to exclude the .graphclientrc.yml configuration from version control.
- Updated the GraphQL endpoint version in the configuration.
- Add a new template configuration file for GraphQL client settings.
- The changes update the GraphQL endpoint configuration for the subgraph client.
- Updated the build-client script to generate a graphclient configuration file before building.

--- a/pkg/subgraph/.graphclientrc.yml
+++ b/pkg/subgraph/.graphclientrc.yml
@@ -2,6 +2,6 @@ sources:
   - name: gv2
     handler:
       graphql:
-        endpoint: ${SUBGRAPH_URL:http://localhost:8000/subgraphs/name/kamikazebr/gv2}
+        endpoint: https://api.studio.thegraph.com/query/70985/gv2-arbsepolia/0.0.2
 documents:
   - ./src/query/queries.graphql
