--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "@sentry/nextjs": "^8",
     "@tanstack/react-query": "^5.17.19",
     "@thirdweb-dev/chain-icons": "^1.0.5",
+    "@uiw/react-markdown-editor": "^6.1.2",
     "@uiw/react-md-editor": "^4.0.4",
     "@urql/next": "^1.1.0",
     "@wagmi/cli": "1.5.2",
