--- a/turbo.json
+++ b/turbo.json
@@ -61,7 +61,8 @@
         "NEXT_PUBLIC_RPC_URL_ETHEREUM",
         "NEXT_PUBLIC_RPC_URL_OPTIMISM",
         "NEXT_PUBLIC_RPC_URL_GNOSIS",
-        "NEXT_PUBLIC_RPC_URL_MATIC"
+        "NEXT_PUBLIC_RPC_URL_MATIC",
+        "CRON_API_KEY"
       ]
     },
     "test": {
