--- a/turbo.json
+++ b/turbo.json
@@ -62,7 +62,7 @@
         "NEXT_PUBLIC_RPC_URL_OPTIMISM",
         "NEXT_PUBLIC_RPC_URL_GNOSIS",
         "NEXT_PUBLIC_RPC_URL_MATIC",
-        "CRON_API_KEY"
+        "CRON_SECRET"
       ]
     },
     "test": {
