:recycle: Refactored code for multi-chain support and improved UI
- Added multi-chain support in daily job route
- Removed redundant API endpoint declaration
- Changed POST request to GET in passport-oracle route
- Enhanced error handling for unauthorized requests
- Added console logs for debugging in CheckPassport component
- Improved form validation logic in AllowListInput and FormInput components
- Updated UI layout and added placeholder option in FormSelect component
- Modified PoolEditForm by removing exportAddresses function, updating labels, and adjusting layout
- Adjusted the way sybil resistance options are handled in PoolForm component
- Updated chain configuration

--- a/pkg/subgraph/src/templates/passportScorer.yaml
+++ b/pkg/subgraph/src/templates/passportScorer.yaml
@@ -19,6 +19,8 @@
         - name: {{name}}
           file: ../contracts/out/{{name}}.sol/{{name}}.json
       eventHandlers:
+        - event: Initialized(uint8)
+          handler: handleInitialized
         - event: UserScoreAdded(indexed address,uint256,uint256)
           handler: handleUserScoreAdded
         - event: UserRemoved(indexed address)
