--- a/pkg/subgraph/src/templates/subgraph.yaml
+++ b/pkg/subgraph/src/templates/subgraph.yaml
@@ -94,7 +94,7 @@ templates:
       eventHandlers:
         - event: InitializedCV(uint256,((uint256,uint256,uint256,uint256),uint8,uint8,(uint256),(address,address,uint256,uint256,uint256,uint256),address,address))
           handler: handleInitialized
-        - event: InitializedCV2(uint256,((uint256,uint256,uint256,uint256),uint8,uint8,(uint256),(address,address,uint256,uint256,uint256,uint256),address,address,address[]))
+        - event: InitializedCV2(uint256,((uint256,uint256,uint256,uint256),uint8,uint8,(uint256),(address,address,uint256,uint256,uint256,uint256),address,address,uint256,address[]))
           handler: handleInitializedV2
         - event: ProposalCreated(uint256,uint256)
           handler: handleProposalCreated
@@ -124,6 +124,8 @@ templates:
           handler: handleAllowlistMembersAdded
         - event: AllowlistMembersRemoved(uint256,address[])
           handler: handleAllowlistMembersRemoved
+        - event: SybilScorerUpdated(address)
+          handler: handleSybilScorerUpdated
  
       file: ./src/mappings/cv-strategy.ts
 
