--- a/pkg/subgraph/package.json
+++ b/pkg/subgraph/package.json
@@ -27,7 +27,7 @@
     "build-deploy:arbsep": "pnpm build:arbsep && pnpm deploy:arbsep:last",
     "build-deploy:ethsep": "pnpm build:ethsep && pnpm deploy:ethsep:last",
     "local": "pnpm create-local && pnpm build && pnpm deploy:local",
-    "last-addr": "ts-node --esm -P ../../apps/web/tsconfig.json ./src/scripts/last-addr.ts",
+    "last-addr": "node src/scripts/last-addr.cjs",
     "proxies:arbsep": "node src/scripts/list-proxies.cjs arbitrum-sepolia",
     "proxies:prod": "node src/scripts/list-proxies.cjs matic && node src/scripts/list-proxies.cjs arbitrum && node src/scripts/list-proxies.cjs optimism && node src/scripts/list-proxies.cjs gnosis",
     "build-client": "mustache ../../apps/web/configs/subgraph.json .graphclientrc.template.yml > .graphclientrc.yml && graphclient build --fileType js",
